# ros2-mobile-robot-perception-control

./: README.md
src/bt_robot/: package.xml  setup.cfg  setup.py
src/bt_robot/bt_robot/: battery_checker.py  battery_publisher.py  bt_main.py  detect_person.py  patrol.py  warn_and_stop.py  yolo_person_detector.py
src/color_tracker/: package.xml  setup.py
src/color_tracker/color_tracker/: calibration.py  color_tracker.py
src/color_tracker/launch/: color_tracker.launch.py
src/color_tracker/model/: colored_cube_circle.sdf  colored_cube_linear.sdf  colored_cube_random.sdf  colored_cube_zigzag.sdf
src/color_tracker/worlds/: zone_a_basic.world  zone_a_multi.world  zone_b_noise.world  zone_c_research.world
src/control_ws/: package.xml  setup.cfg  setup.py
src/control_ws/control_ws/: impedance_control.py  mpc_control.py  pid_control.py
src/domain_randomizer/: package.xml  setup.cfg  setup.py
src/domain_randomizer/domain_randomizer/: randomize_light.py
src/finger_fsm/: package.xml  setup.cfg  setup.py
src/finger_fsm/finger_fsm/: fsm_node.py
src/fsm_pkg/: package.xml  setup.cfg  setup.py
src/fsm_pkg/fsm_pkg/: obstacle_avoid_fsm.py  simple_fsm.py
src/moving_plugins/: CMakeLists.txt  package.xml
src/moving_plugins/src/: CircularMovePlugin.cpp  LinearMovePlugin.cpp  PathMovePlugin.cpp  RandomMovePlugin.cpp  ZigzagMovePlugin.cpp
src/object_tracker/: package.xml  setup.py
src/object_tracker/launch/: object_tracker.launch.py
src/object_tracker/object_tracker/: perception_node.py  tracker_node.py
src/path_planner/: package.xml  setup.py
src/path_planner/path_planner/: a_star_planner.py  path_follower.py
src/patrol_bot/: package.xml  setup.cfg  setup.py
src/patrol_bot/patrol_bot/: patrol_with_actions.py
src/patrol_robot/: package.xml  setup.py
src/patrol_robot/launch/: patrol.launch.py
src/patrol_robot/patrol_robot/: navigator_node.py  object_tracker.py  yolo_detector.py
src/pid_control/: package.xml  setup.cfg  setup.py
src/pid_control/pid_control/: pid_controller.py
src/place_navigator/: package.xml  setup.cfg  setup.py
src/place_navigator/place_navigator/: navigator_node.py
src/robot_diagnostics/: package.xml  setup.cfg  setup.py
src/robot_diagnostics/robot_diagnostics/: diagnostic_node.py
src/sensor_subscriber/: package.xml  setup.cfg  setup.py
src/sensor_subscriber/sensor_subscriber/: image_subscriber.py  odom_listener.py  scan_listener.py
src/simple_service/: package.xml  setup.cfg  setup.py
src/simple_service/simple_service/: add_two_ints_client.py  add_two_ints_server.py
src/stt_control/: package.xml  setup.cfg  setup.py
src/stt_control/audio/: apeuro.m4a  dwiro.m4a  jeongji.m4a
src/stt_control/launch/: stt_control.launch.py
src/stt_control/stt_control/: stt_node.py  stt_utils.py
src/tf2_demo/: package.xml  setup.py
src/tf2_demo/tf2_demo/: broadcaster.py  listener.py
src/turtlebot3_cmdvel_pub/: package.xml  setup.cfg  setup.py
src/turtlebot3_cmdvel_pub/turtlebot3_cmdvel_pub/: cmdvel_publisher.py
src/turtlebot3_teleop_keyboard/: package.xml  setup.cfg  setup.py
src/turtlebot3_teleop_keyboard/turtlebot3_teleop_keyboard/: keyboard_teleop.py
src/urdf_tutorial/: package.xml  setup.py
src/urdf_tutorial/config/: camera.rviz  carto.lua  depth.rviz  gazebo_camera.yaml  lidar.rviz  robot.rviz  with_robot.world
src/urdf_tutorial/launch/: camera.launch.py  cartographer.launch.py  depth.launch.py  imu.launch.py  imu2.launch.py  lidar.launch.py  robot_1.launch.py  robot_4.launch.py  robot_5.launch.py  robot_6.launch.py  robot_7.launch.py  robot_8.launch.py  sim.launch.py
src/urdf_tutorial/urdf/: arm_robot.xacro  camera.xacro  depth.xacro  gazebo.xacro  imu.xacro  lidar.xacro  robot_2.xacro  robot_3.xacro  robot_4.xacro  robot_5.xacro  robot_6.xacro  robot_7.xacro
src/urdf_tutorial/urdf_tutorial/: processor_3d.py
src/yolo_gazebo_detection/: package.xml  requirements.mtxt  setup.cfg  setup.py
src/yolo_gazebo_detection/launch/: detection.launch.py
src/yolo_gazebo_detection/worlds/: detection_world.world
src/yolo_gazebo_detection/yolo_gazebo_detection/: gazebo_camera.py  robot_controller.py  visualization.py  yolo_detector.py
src/yolo_llava_pkg/: package.xml  setup.cfg  setup.py
src/yolo_llava_pkg/yolo_llava_pkg/: llava_processor.py  object_detector.py
src/yolo_marker_publisher/: package.xml  setup.cfg  setup.py
src/yolo_marker_publisher/launch/: marker_node.launch.py
src/yolo_marker_publisher/yolo_marker_publisher/: marker_node.py
