<?xml version="1.0"?>
<package format="3">
  <name>moving_plugins</name>
  <version>0.1.0</version>
  <description>Gazebo model plugins for moving colored cubes (linear, circular, zigzag, random, path)</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>


  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>
  <depend>rosidl_default_generators</depend>


  <export>
  <build_type>ament_cmake</build_type>
  </export>
</package>
